get assets applicants have applied to
